# pwd-manager

./: .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .env.sample  .gitignore  Dockerfile  README.md  fastapi-entrypoint.sh  main.py  manage.py  pyproject.toml  start_server.py
backend/passwords/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/passwords/migrations/: 0001_initial.py  0002_auto_20230506_0702.py  0003_alter_password_category_alter_password_id_and_more.py  0004_password_name.py  0005_alter_password_name.py
backend/pwd_manager/: asgi.py  settings.py  urls.py  wsgi.py
backend/src/: main.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py  register_user.py
backend/src/core/: env.py
backend/src/schemas/: user.py
backend/src/services/cosmos_db/: manager.py
backend/users/: serializers.py  tests.py  urls.py  utils.py  views.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js  routes.js
frontend/src/components/: AppRouter.js  CategoryBar.js  NavBar.js  PasswordItem.js  PasswordList.js
frontend/src/components/app-header/: app-header.js
frontend/src/components/app-main/: app-main.js
frontend/src/components/modals/: CreateCategory.js  CreatePassword.js
frontend/src/http/: index.js  managerAPI.js  userAPI.js
frontend/src/manager/: PasswordManager.js  UserManager.js
frontend/src/pages/: Auth.js  Create.js  Detail.js  Main.js  Manager.js  Reg.js
frontend/src/utils/: constants.js
