[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["PashaDem <dem-pasha@lenta.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pydantic = "^1.10.7"
aiohttp = "^3.8.4"
pre-commit = "^3.2.2"
python-dotenv = "^1.0.0"
djangorestframework-simplejwt = "^5.2.2"
django = "3.0"
djangorestframework = "3.10"
djangorestframework-jwt = "^1.11.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
