[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["PashaDem <dem-pasha@lenta.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
aiohttp = "^3.8.4"
pre-commit = "^3.2.2"
python-dotenv = "^1.0.0"
django = "3.0"
djangorestframework = "3.10"
cryptography = "^40.0.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"